# solar_area_calculation

./: LICENSE  README.md  area.py  examples.ipynb  pyproject.toml  solar_area_calculation.py
examples/: examples.ipynb
solar_area_calculation/: __init__.py  area.py  map.mplstyle  mapping.py  math_helpers.py
